multi pane support with partial templates, ng-cordova hacked to add OSM

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,1 +1,6 @@
-login
+<ion-view view-title="Auth">
+<ion-content class="padding">
+      <button class="button button-block button-calm" ng-click="login()">Login</button>
+</ion-content>
+</ion-view>
+
