--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,1 +1,9 @@
-map
+<ion-view view-title="Here">
+      <ion-content>
+<button class="button button-block button-calm" ng-click="login()">Login</button>
+        <div id="map">
+        </div>
+
+</ion-content>
+    </ion-view>
+
