backed out of the auth tactic, didnt work on mobile

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,9 @@
     width: 100%;
 }
 
-#my-div-icon {
-	width:20px;   	
+.my-div-icon {
+    font-size: 150%;
+    font-weight: bold;
+    width: 20px;
+    height: 20px;
 }
